@@ -26,3 +26,5 @@ repository.type = git
 
 [ModuleBuild]
 mb_version = 0.35
+mb_class = Dist::Zilla::LocaleTextDomainBuild
+
